# peanuts-pytorch

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: data-handling.mdc  development-setup.mdc  evaluation-metrics.mdc  model-architectures.mdc  training-workflow.mdc
config/: test.yaml  train.yaml
config/data/: hakone.yaml  sample.yaml
peanuts/: evaluate.py  plot.py  train.py
peanuts/dataset/: __init__.py  _sample_dataset.py  geosciai_dataset.py  hakone_dataset.py  sample_dataset.py
peanuts/metrics/: __init__.py  f1_score.py  loss.py  precision.py  recall.py
peanuts/models/: __init__.py  attention_unet.py  phase_net.py  r2_unet.py  r2a_unet.py  r2au_net.py  r2u_net.py
peanuts/modules/: __init__.py  attention_gate.py  conv.py  conv_transpose.py  rcl.py  rrcnn.py
peanuts/plots/: __init__.py  plot_event.py
peanuts/utils/: __init__.py  get_device.py  metrics_helper.py  test_fn.py  train_fn.py  utils.py
src/peanuts/: evaluate.py  main.py  plot.py  test.py  train.py
src/peanuts/dataset/: __init__.py  _sample_dataset.py  geosciai_dataset.py  hakone_dataset.py  sample_dataset.py
src/peanuts/metrics/: __init__.py  loss.py
src/peanuts/models/: __init__.py  attention_unet.py  phase_net.py  r2au_net.py  r2u_net.py
src/peanuts/modules/: conv.py
src/peanuts/output/: export_predictions.py  plot_diffs.py  plot_event.py  plot_history.py
src/peanuts/plots/: __init__.py  plot_diffs.py  plot_event.py  plot_residual.py
src/peanuts/scripts/: check_types.py
src/peanuts/utils/: __init__.py  common.py  export_fn.py  export_history.py  metrics.py  (+9 more)
