[project]
name = "peanuts"
version = "0.2.0"
description = "For building variations of PhaseNet."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=2.3.0",
    "obspy>=1.4.2",
    "pandas>=2.3.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "ty>=0.0.1a8",
]

[project.scripts]
hello = "train:train"
